Closed Bug 291074 Opened 21 years ago Closed 20 years ago

No accessibility events when data in a tree row changes in about:config

Categories

(Core :: Disability Access APIs, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

Details

(Keywords: access, fixed1.8)

Attachments

(1 file)

Steps to reproduce: 1. Go to URL about:config 2. Navigate to a boolean pref 3. Type Shift+F10 T to toggle No accessibility events are fired to indicate there is a change, and a screen reader does not speak the change.
Now it fires NameChange events.
Attachment #195774 - Flags: review?(mconnor) → review+
Attachment #195774 - Flags: superreview?(neil.parkwaycc.co.uk)
Flags: blocking1.8b5?
Comment on attachment 195774 [details] [diff] [review] A fix only for about:config, good enough for Firefox for now sr=me if you patch xpfe's config.js too ;-)
Attachment #195774 - Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
Comment on attachment 195774 [details] [diff] [review] A fix only for about:config, good enough for Firefox for now I also patched xpfe, as Neil requested. I'd like to leave this bug open, for future work on the general case (for things like Thunderbird).
Attachment #195774 - Flags: approval1.8b5?
Well, I'll mark this fixed and file a new bug fore the general case.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Summary: No accessibility events when data in a tree row changes → No accessibility events when data in a tree row changes in about:config
Attachment #195774 - Flags: approval1.8b5? → approval1.8b5+
please add the fixed1.8 keyword when you land this on the branch
Flags: blocking1.8b5? → blocking1.8b5+
Keywords: fixed1.8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: