Bug 291074. Fire namechange events for about:config tree items that change. r=mconnor, sr=neil