toolkit/components/viewconfig/content/config.js
@@ -552,6 +552,11 @@ function ModifyPref(entry)
   
   gPrefService.savePrefFile(null);
   
+  // Fire event for accessibility
+  var event = document.createEvent('Events');
+  event.initEvent('NameChange', false, true);
+  document.getElementById("configTree").dispatchEvent(event);
+
   return true;
 }
 
